[package]
name = "mugit"
description = "multiple git"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
edition = "2018"

[dependencies]
git2 = "0.19"
semver = "0.11"
clap = "3"
thiserror = "1"
anyhow = "1"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
ansi_term = "0.12"
